# TradeMindAI

./: .env.example  .gitignore  .trivyignore  CLAUDE.md  Makefile  PLAN_EXECUTION.md  README.md  activation_plan.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  sprint8-kickoff.md  test_fix_plan.md  velvet-rolling-gosling.md
.codex/: Sprint_11_architecture_logic_remediation.md
infrastructure/: init-schemas.sql
scripts/: jira-export-csv.py  jira-sync.py  jira-update-status.py  seed-data.sh  seed_market_data.py  (+1 more)
services/ai-engine/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
services/ai-engine/alembic/: env.py
services/ai-engine/alembic/versions/: 0001_create_ai_engine_schema.py
services/ai-engine/scripts/: seed_model.py
services/ai-engine/src/ai_engine/: __init__.py  config.py  main.py
services/ai-engine/src/ai_engine/adapters/in_/: auth.py  health.py  models.py  prediction.py  training.py
services/ai-engine/src/ai_engine/core/domain/: data_loader.py  feature_engineering.py  label_generator.py  normalizer.py  sequence_builder.py
services/ai-engine/src/ai_engine/core/models/: __init__.py  cnn.py
services/ai-engine/src/ai_engine/core/ports/: predictor.py
services/ai-engine/src/ai_engine/core/use_cases/: evaluator.py  model_registry.py  prediction_service.py  trainer.py
services/ai-engine/tests/: conftest.py
services/ai-engine/tests/integration/: test_api_flow.py
services/ai-engine/tests/unit/: test_cnn_model.py  test_main_wiring.py  test_market_data_client.py  test_security.py
(+351 files in other folders)
