[build-system]
requires = ["setuptools>=80.0.0", "wheel>=0.46.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-engine"
version = "0.1.0"
description = "AI engine service for stock price direction prediction"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "torch>=2.2.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
    "aio-pika>=9.4.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "black>=24.4.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]

[tool.ruff.lint.isort]
known-first-party = ["ai_engine"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
